--- a/debian/odoo.conf
+++ b/debian/odoo.conf
@@ -6,3 +6,4 @@ db_port = False
 db_user = odoo
 db_password = False
 ;addons_path = /usr/lib/python3/dist-packages/odoo/addons
+addons_path = /Users/tamarayustian/src/odoo-taotaro/addons, /Users/tamarayustian/src/odoo-taotaro/custom
