--- a/debian/odoo.conf
+++ b/debian/odoo.conf
@@ -1,9 +1,9 @@
 [options]
 ; This is the password that allows database operations:
-; admin_passwd = admin
+admin_passwd = admin
 db_host = False
 db_port = False
 db_user = odoo
-db_password = False
+db_password = test1234
 ;addons_path = /usr/lib/python3/dist-packages/odoo/addons
 addons_path = /Users/tamarayustian/src/odoo-taotaro/addons, /Users/tamarayustian/src/odoo-taotaro/custom
