--- a/debian/odoo.conf
+++ b/debian/odoo.conf
@@ -4,6 +4,6 @@ admin_passwd = admin
 db_host = False
 db_port = False
 db_user = odoo
-db_password = test1234
+db_password = False
 ;addons_path = /usr/lib/python3/dist-packages/odoo/addons
 addons_path = /Users/tamarayustian/src/odoo-taotaro/addons, /Users/tamarayustian/src/odoo-taotaro/custom
